--- a/sopra-services/pom.xml
+++ b/sopra-services/pom.xml
@@ -18,5 +18,11 @@
             <artifactId>sopra-repositories</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+
     </dependencies>
 </project>
