--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 	</properties>
 
 	<modules>
+		<module>sopra-event-store</module>
 		<module>sopra-vo</module>
 		<module>sopra-repositories</module>
 		<module>sopra-services</module>
