Integrando bien sopra-event-store. El parent no estaba bien, apuntaba a spring-boot-starter-parent en vez de sopra-builder..

--- a/sopra-event-store/pom.xml
+++ b/sopra-event-store/pom.xml
@@ -3,14 +3,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
+		<artifactId>sopra-builder</artifactId>
+		<groupId>sopra.prototype</groupId>
+		<version>${project.version}</version>
+	</parent>
+	<!--
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.4.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
+	-->
 	<groupId>sopra.prototype</groupId>
 	<artifactId>sopra-event-store</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${project.version}</version>
 	<name>sopra-event-store</name>
 	<description>Demo project for Spring Boot</description>
 	<packaging>pom</packaging>
