--- a/sopra-event-store/sopra-event-consumer/pom.xml
+++ b/sopra-event-store/sopra-event-consumer/pom.xml
@@ -2,15 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<!--
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.10.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
+-->
+	<parent>
+		<artifactId>sopra-event-store</artifactId>
+		<groupId>sopra.prototype</groupId>
+		<version>${project.version}</version>
+	</parent>
+
 	<groupId>sopra.prototype</groupId>
 	<artifactId>sopra-event-consumer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${project.version}</version>
 	<name>sopra-event-consumer</name>
 	<description>Kafka consumer</description>
 
