--- a/sopra-event-store/pom.xml
+++ b/sopra-event-store/pom.xml
@@ -7,19 +7,10 @@
 		<groupId>sopra.prototype</groupId>
 		<version>${project.version}</version>
 	</parent>
-	<!--
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4.RELEASE</version>
-		<relativePath/>
-	</parent>
-	-->
-	<groupId>sopra.prototype</groupId>
+
 	<artifactId>sopra-event-store</artifactId>
-	<version>${project.version}</version>
 	<name>sopra-event-store</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Consumer and producer event store</description>
 	<packaging>pom</packaging>
 
 	<properties>
