--- a/sopra-services/pom.xml
+++ b/sopra-services/pom.xml
@@ -15,14 +15,20 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>sopra-repositories</artifactId>
+            <artifactId>sopra-event-producer</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.vavr</groupId>
-            <artifactId>vavr</artifactId>
-            <version>0.9.2</version>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sopra-event-consumer</artifactId>
+            <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sopra-repositories</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
 
     </dependencies>
 </project>
