--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
 	</properties>
 
 	<modules>
-		<module>sopra-event-store</module>
+		<module>sopra-event-consumer</module>
+		<module>sopra-event-producer</module>
 		<module>sopra-vo</module>
 		<module>sopra-repositories</module>
 		<module>sopra-services</module>
@@ -138,12 +139,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
-		<dependency>
-			<groupId>org.springframework.kafka</groupId>
-			<artifactId>spring-kafka</artifactId>
-			<version>2.4.5.RELEASE</version>
-		</dependency>
+
 
 	</dependencies>
 
