Salvando trabajo actual. Actualmente los tests no funcionan, debido a que spring no inicializa dependencias. No qualifying bean of type 'org.springframework.kafka.core.KafkaTemplate available.

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 	</properties>
 
 	<modules>
+		<module>sopra-patterns</module>
 		<module>sopra-event-consumer</module>
 		<module>sopra-event-producer</module>
 		<module>sopra-vo</module>
