--- a/sopra-services/pom.xml
+++ b/sopra-services/pom.xml
@@ -20,6 +20,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>sopra-patterns</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>sopra-event-consumer</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -28,5 +33,12 @@
             <artifactId>sopra-repositories</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!--
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>annotations</artifactId>
+            <version>17.0.0</version>
+        </dependency>
+        -->
     </dependencies>
 </project>
