Añadido más configuración al productor kafka, actualizado el test, añadido un main. guardando el trabajo.

--- a/sopra-event-producer/pom.xml
+++ b/sopra-event-producer/pom.xml
@@ -27,12 +27,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream</artifactId>
@@ -119,4 +113,27 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<build>
+		<defaultGoal>spring-boot:run</defaultGoal>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>sopra.prototype.soprakafka.SpringBootProducerApplication</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+	</build>
+
+	<organization>
+		<name>sopra</name>
+		<url>https://www.soprasteria.es/es</url>
+	</organization>
 </project>
