--- a/sopra-event-producer/src/main/resources/application.properties
+++ b/sopra-event-producer/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.port = 8080
-kafka.bootstrapAddress = 0.0.0.0:29092
 command.topic.name = users-event-topic-out
 kafka.numPartitions = 1
 kafka.replicationFactor = 1
+spring.kafka.consumer.bootstrap-servers = 0.0.0.0:9092
+spring.kafka.consumer.group-id = group_id
+spring.kafka.consumer.auto-offset-reset = earliest
+spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.bootstrap-servers = localhost:9092
+spring.kafka.produce.rkey-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer =  org.apache.kafka.common.serialization.StringSerializer
