--- a/sopra-query-services/pom.xml
+++ b/sopra-query-services/pom.xml
@@ -30,4 +30,23 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <!--
+        <defaultGoal>spring-boot:run</defaultGoal>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+        -->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+
 </project>
