--- a/sopra-query-services/src/main/resources/application-query.properties
+++ b/sopra-query-services/src/main/resources/application-query.properties
@@ -24,3 +24,26 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# ===============================
+# = SPRING BOOT ACTUATOR
+# ===============================
+management.security.enabled = false
+#management.endpoints.web.exposure.include=*
+# ===============================
+# = JMX
+# ===============================
+#spring.jmx.default_domain = com.arquetipo
+spring.locale.default = es
+spring.messages.basename = i18n/messages
+server.port = 8002
+server.servlet.contextPath = /sopraQueries
+server.undertow.accesslog.enabled = true
+server.undertow.accesslog.dir = target/logs
+
+spring.profiles.active = @spring.profiles.active@
+spring.application.name = sopra-query-services
+
+logging.pattern.console = "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.pattern.file = "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.file = ./src/main/logs/sopra.springboot.log
