Arreglados bugs. Trabajando en tests de integración. https://trello.com/c/rJJy4UIP/17-cqrs-microservicio-gestor

--- a/sopra-services/pom.xml
+++ b/sopra-services/pom.xml
@@ -29,4 +29,33 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <spring.profiles.active>dev</spring.profiles.active>
+            </properties>
+        </profile>
+        <profile>
+            <id>pre</id>
+            <properties>
+                <spring.profiles.active>pre</spring.profiles.active>
+            </properties>
+        </profile>
+        <profile>
+            <id>pro</id>
+            <properties>
+                <spring.profiles.active>pro</spring.profiles.active>
+            </properties>
+        </profile>
+    </profiles>
+
+    <organization>
+        <name>sopra</name>
+        <url>https://www.soprasteria.es/es</url>
+    </organization>
 </project>
