--- a/sopra-services/src/main/resources/application-command.properties
+++ b/sopra-services/src/main/resources/application-command.properties
@@ -37,12 +37,12 @@ management.security.enabled = false
 spring.locale.default = es
 spring.messages.basename = i18n/messages
 server.port = 8002
-server.servlet.contextPath = /sopraQueries
+server.servlet.contextPath = /sopraCommands
 server.undertow.accesslog.enabled = true
 server.undertow.accesslog.dir = target/logs
 
 spring.profiles.active = @spring.profiles.active@
-spring.application.name = sopra-query-services
+spring.application.name = sopra-commands-services
 
 logging.pattern.console = "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.pattern.file = "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
