--- a/sopra-spring/src/main/resources/config/application.properties
+++ b/sopra-spring/src/main/resources/config/application.properties
@@ -44,3 +44,19 @@ spring.application.name = sopra-prototype
 logging.pattern.console = "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.pattern.file = "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file = ./src/main/logs/sopra.springboot.log
+# only refresh the browser whenever a static resource has changed (and ignore any change in the code)
+spring.devtools.remote.restart.enabled=false
+# ===============================
+# = KAFKA
+# ===============================
+command.topic.name = users-event-topic-out
+query.topic.name = users-event-topic-out 
+kafka.numPartitions = 1
+kafka.replicationFactor = 1
+spring.kafka.producer.bootstrap-servers = 0.0.0.0:9092
+spring.kafka.group-id = group_id
+spring.kafka.consumer.auto-offset-reset = earliest
+spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.produce.key-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer =  org.apache.kafka.common.serialization.StringSerializer
