--- a/sopra-event-producer/src/main/resources/application.properties
+++ b/sopra-event-producer/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-server.port = 8080
+# server.port = 8080
 command.topic.name = users-event-topic-out
 kafka.numPartitions = 1
 kafka.replicationFactor = 1
-spring.kafka.consumer.bootstrap-servers = 0.0.0.0:9092
-spring.kafka.consumer.group-id = group_id
-spring.kafka.consumer.auto-offset-reset = earliest
-spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.producer.bootstrap-servers = localhost:9092
-spring.kafka.produce.rkey-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.group-id = group_id
+spring.kafka.producer.auto-offset-reset = earliest
+spring.kafka.producer.bootstrap-servers = 0.0.0.0:9092
+spring.kafka.produce.key-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer =  org.apache.kafka.common.serialization.StringSerializer
