--- a/sopra-repositories/pom.xml
+++ b/sopra-repositories/pom.xml
@@ -20,4 +20,20 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+<!--
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+-->
 </project>
