Adding ServiceQueryTest to sopra-query-services.

--- a/sopra-query-services/src/main/resources/application-query.properties
+++ b/sopra-query-services/src/main/resources/application-query.properties
@@ -2,9 +2,9 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mariadb://localhost:3306/queries
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.query.url=jdbc:mariadb://localhost:3306/queries
+spring.datasource.query.username=root
+spring.datasource.query.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
