Adding to sopra.protoype.kafka.listeners.Listener ServiceQuery dependency to saved aggregation command to query cluster. Modified QuickTests.java with the necessary to get this stuff working.

--- a/sopra-query-services/pom.xml
+++ b/sopra-query-services/pom.xml
@@ -24,12 +24,13 @@
             <artifactId>sopra-repositories</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+<!-- Dependencia circular, por qué la puse?
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>sopra-spring</artifactId>
             <version>${project.version}</version>
         </dependency>
+-->
     </dependencies>
 
 </project>
