Ahora el kafka listener detecta que quieres borrar algo en el query cluster y actua en consecuencia. Ajustado max.poll.interval.ms en el consumidor para que le de tiempo a ejecutar todo cuando ejecuto los tests unitarios y de integración.

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
 	<modules>
 		<module>sopra-patterns</module>
-		<module>sopra-event-consumer</module>
+		<!-- <module>sopra-event-consumer</module> -->
 		<module>sopra-event-producer</module>
 		<module>sopra-vo</module>
 		<module>sopra-repositories</module>
