--- a/sopra-query-services/src/main/resources/application-query.properties
+++ b/sopra-query-services/src/main/resources/application-query.properties
@@ -47,3 +47,4 @@ spring.application.name = sopra-query-services
 logging.pattern.console = "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.pattern.file = "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file = ./src/main/logs/sopra.springboot.log
+spring.kafka.consumer.max.poll.interval.ms = 300000
